// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Node-API on Darwin Off 1`] = `
Object {
  "delete": Object {
    "posts": Object {
      "count": 1,
    },
    "users": Object {
      "count": 1,
    },
  },
  "post.findUnique": Object {
    "id": 1,
    "title": "Test",
    "userId": 1,
  },
  "user.create": Object {
    "email": "test@example.com",
    "id": 1,
    "name": "Test",
    "posts": Array [
      Object {
        "id": 1,
        "title": "Test",
        "userId": 1,
      },
    ],
  },
  "users.findMany": Array [],
}
`;

exports[`Node-API on Darwin Off 2`] = `
"prisma                : placeholder 
@prisma/client        : placeholder 
Current platform      : placeholder 
Query Engine          : placeholder (at node_modules/@prisma/engines/query-engine-darwin)
Migration Engine      : placeholder (at node_modules/@prisma/engines/migration-engine-darwin)
Introspection Engine  : placeholder (at node_modules/@prisma/engines/introspection-engine-darwin)
Format Binary         : placeholder (at node_modules/@prisma/engines/prisma-fmt-darwin)
Default Engines Hash  : placeholder 
Studio                : placeholder "
`;

exports[`Node-API on Darwin Off: ./node_modules/.prisma/client 1`] = `
Array [
  "index-browser.js",
  "index.d.ts",
  "index.js",
  "package.json",
  "query-engine-darwin",
  "schema.prisma",
]
`;

exports[`Node-API on Darwin Off: ./node_modules/@prisma/engines 1`] = `
Array [
  "README.md",
  "dist",
  "download",
  "introspection-engine-darwin",
  "migration-engine-darwin",
  "package.json",
  "prisma-fmt-darwin",
  "query-engine-darwin",
]
`;

exports[`Node-API on Darwin Off: ./node_modules/prisma 1`] = `
Array [
  "README.md",
  "build",
  "install",
  "package.json",
  "preinstall",
  "prisma-client",
  "query-engine-darwin",
  "scripts",
]
`;

exports[`Node-API on Darwin PRISMA_FORCE_NAPI=true 1`] = `
Object {
  "delete": Object {
    "posts": Object {
      "count": 1,
    },
    "users": Object {
      "count": 1,
    },
  },
  "post.findUnique": Object {
    "id": 1,
    "title": "Test",
    "userId": 1,
  },
  "user.create": Object {
    "email": "test@example.com",
    "id": 1,
    "name": "Test",
    "posts": Array [
      Object {
        "id": 1,
        "title": "Test",
        "userId": 1,
      },
    ],
  },
  "users.findMany": Array [],
}
`;

exports[`Node-API on Darwin PRISMA_FORCE_NAPI=true 2`] = `
"prisma                : placeholder 
@prisma/client        : placeholder 
Current platform      : placeholder 
N-API Query Engine    : placeholder (at node_modules/@prisma/engines/libquery_engine_napi-darwin.dylib.node)
Migration Engine      : placeholder (at node_modules/@prisma/engines/migration-engine-darwin)
Introspection Engine  : placeholder (at node_modules/@prisma/engines/introspection-engine-darwin)
Format Binary         : placeholder (at node_modules/@prisma/engines/prisma-fmt-darwin)
Default Engines Hash  : placeholder 
Studio                : placeholder "
`;

exports[`Node-API on Darwin PRISMA_FORCE_NAPI=true and Preview Feature 1`] = `
Object {
  "delete": Object {
    "posts": Object {
      "count": 1,
    },
    "users": Object {
      "count": 1,
    },
  },
  "post.findUnique": Object {
    "id": 1,
    "title": "Test",
    "userId": 1,
  },
  "user.create": Object {
    "email": "test@example.com",
    "id": 1,
    "name": "Test",
    "posts": Array [
      Object {
        "id": 1,
        "title": "Test",
        "userId": 1,
      },
    ],
  },
  "users.findMany": Array [],
}
`;

exports[`Node-API on Darwin PRISMA_FORCE_NAPI=true and Preview Feature 2`] = `
"prisma                : placeholder 
@prisma/client        : placeholder 
Current platform      : placeholder 
N-API Query Engine    : placeholder (at node_modules/@prisma/engines/libquery_engine_napi-darwin.dylib.node)
Migration Engine      : placeholder (at node_modules/@prisma/engines/migration-engine-darwin)
Introspection Engine  : placeholder (at node_modules/@prisma/engines/introspection-engine-darwin)
Format Binary         : placeholder (at node_modules/@prisma/engines/prisma-fmt-darwin)
Default Engines Hash  : placeholder 
Studio                : placeholder 
Preview Features      : placeholder "
`;

exports[`Node-API on Darwin PRISMA_FORCE_NAPI=true and Preview Feature: ./node_modules/.prisma/client 1`] = `
Array [
  "index-browser.js",
  "index.d.ts",
  "index.js",
  "libquery_engine_napi-darwin.dylib.node",
  "package.json",
  "schema.prisma",
]
`;

exports[`Node-API on Darwin PRISMA_FORCE_NAPI=true and Preview Feature: ./node_modules/@prisma/engines 1`] = `
Array [
  "README.md",
  "dist",
  "download",
  "introspection-engine-darwin",
  "libquery_engine_napi-darwin.dylib.node",
  "migration-engine-darwin",
  "package.json",
  "prisma-fmt-darwin",
]
`;

exports[`Node-API on Darwin PRISMA_FORCE_NAPI=true and Preview Feature: ./node_modules/prisma 1`] = `
Array [
  "README.md",
  "build",
  "install",
  "libquery_engine_napi-darwin.dylib.node",
  "package.json",
  "preinstall",
  "prisma-client",
  "scripts",
]
`;

exports[`Node-API on Darwin PRISMA_FORCE_NAPI=true: ./node_modules/.prisma/client 1`] = `
Array [
  "index-browser.js",
  "index.d.ts",
  "index.js",
  "libquery_engine_napi-darwin.dylib.node",
  "package.json",
  "schema.prisma",
]
`;

exports[`Node-API on Darwin PRISMA_FORCE_NAPI=true: ./node_modules/@prisma/engines 1`] = `
Array [
  "README.md",
  "dist",
  "download",
  "introspection-engine-darwin",
  "libquery_engine_napi-darwin.dylib.node",
  "migration-engine-darwin",
  "package.json",
  "prisma-fmt-darwin",
]
`;

exports[`Node-API on Darwin PRISMA_FORCE_NAPI=true: ./node_modules/prisma 1`] = `
Array [
  "README.md",
  "build",
  "install",
  "libquery_engine_napi-darwin.dylib.node",
  "package.json",
  "preinstall",
  "prisma-client",
  "scripts",
]
`;

exports[`Node-API on Darwin Preview Feature 1`] = `
Object {
  "delete": Object {
    "posts": Object {
      "count": 1,
    },
    "users": Object {
      "count": 1,
    },
  },
  "post.findUnique": Object {
    "id": 1,
    "title": "Test",
    "userId": 1,
  },
  "user.create": Object {
    "email": "test@example.com",
    "id": 1,
    "name": "Test",
    "posts": Array [
      Object {
        "id": 1,
        "title": "Test",
        "userId": 1,
      },
    ],
  },
  "users.findMany": Array [],
}
`;

exports[`Node-API on Darwin Preview Feature 2`] = `
"prisma                : placeholder 
@prisma/client        : placeholder 
Current platform      : placeholder 
Query Engine          : placeholder (at node_modules/@prisma/engines/query-engine-darwin)
Migration Engine      : placeholder (at node_modules/@prisma/engines/migration-engine-darwin)
Introspection Engine  : placeholder (at node_modules/@prisma/engines/introspection-engine-darwin)
Format Binary         : placeholder (at node_modules/@prisma/engines/prisma-fmt-darwin)
Default Engines Hash  : placeholder 
Studio                : placeholder 
Preview Features      : placeholder "
`;

exports[`Node-API on Darwin Preview Feature: ./node_modules/.prisma/client 1`] = `
Array [
  "index-browser.js",
  "index.d.ts",
  "index.js",
  "libquery_engine_napi-darwin.dylib.node",
  "package.json",
  "schema.prisma",
]
`;

exports[`Node-API on Darwin Preview Feature: ./node_modules/@prisma/engines 1`] = `
Array [
  "README.md",
  "dist",
  "download",
  "introspection-engine-darwin",
  "migration-engine-darwin",
  "package.json",
  "prisma-fmt-darwin",
  "query-engine-darwin",
]
`;

exports[`Node-API on Darwin Preview Feature: ./node_modules/prisma 1`] = `
Array [
  "README.md",
  "build",
  "install",
  "libquery_engine_napi-darwin.dylib.node",
  "package.json",
  "preinstall",
  "prisma-client",
  "query-engine-darwin",
  "scripts",
]
`;
